add test-server route
