# api.yml
@@ -6,6 +6,22 @@ servers:
   - url: http://localhost:8080
     description: Development server
 paths:
+  /test-server:
+    get:
+      tags:
+        - "Test"
+      summary: Test server
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Server is running
   /auth/login:
     post:
       tags:
